--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     }
   ],
   "require": {
-    "php": "^7.2",
+    "php": "^7.2|^8.0",
     "ext-redis": "^5.0.1",
     "ext-json": "*",
     "myclabs/php-enum": "^1.7"
